# JS-Compiler-Project

./: CMakeLists.txt  README.md  build.bat  documentation.md
docs/: index.md
docs/Lexing/: Lexing.md  NamingFormat.md  lexer.md
docs/Optimization/: ast_optimizations.md  lexer_optimizations.md  optimization.md
docs/Parsing/: Parsing.md  parser.md  tokens.md
examples/: cfg_ssa_example.cpp  dataflow_analysis_example.cpp  dataflow_test.js
include/: ast.h  ast_printer.h  ast_visitor.h  benchmark.h  compiler_driver.h  error_reporter.h  lexer.h  parser.h  parser_error.h  scope.h  scope_analyzer.h  source_position.h  token.h  version.h
include/benchmark/: benchmark_framework.h  js_benchmarks.h
include/cfg/: cfg_builder.h  control_flow_graph.h  dataflow_analyses.h  ssa_transformer.h
include/llvm_backend/: js_runtime.h  js_type_mapping.h  js_value_type.h  llvm_backend.h
rust_memory/include/: js_memory_manager.hpp
rust_memory/js_memory_manager/: Cargo.toml  build.rs
rust_memory/js_memory_manager/src/: ffi.rs  gc.rs  lib.rs  object.rs  shape.rs  string_interner.rs
src/: ast.cpp  ast_printer.cpp  benchmark_main.cpp  error_reporter.cpp  lexer.cpp  main.cpp  parser.cpp  scope.cpp  scope_analyzer.cpp  source_position.cpp
src/benchmark/: benchmark_framework.cpp  benchmark_runner.cpp
src/cfg/: cfg_builder.cpp  control_flow_graph.cpp  ssa_transformer.cpp
src/llvm_backend/: js_runtime.cpp  js_type_mapping.cpp  llvm_backend.cpp  llvm_codegen.cpp
tests/: CMakeLists.txt
tests/ast/: ast_test.cc
tests/lexer/: lexer_test.cc
tests/parser/: parser_test.cc
tests/source_position/: source_position_test.cc
