[package]
name = "js_memory_manager"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Memory management layer for JavaScript Compiler implemented in Rust"

[lib]
name = "js_memory_manager"
crate-type = ["staticlib", "cdylib"]

[dependencies]
libc = "0.2.147"
once_cell = "1.18.0"
parking_lot = "0.12.1"

[dependencies.crossbeam]
version = "0.8.2"
features = ["atomic"]

[build-dependencies]
cbindgen = "0.24.5"

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
panic = "abort"